pom changes for cloud deployment

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+       	<!-- as per reference<app.runtime>4.3.0</app.runtime> -->
 		<app.runtime>4.3.0-20210322</app.runtime>
-		<mule.maven.plugin.version>3.5.1</mule.maven.plugin.version>
+		<!-- maven plugin updated -->
+		<mule.maven.plugin.version>3.8.1</mule.maven.plugin.version>
+		<!-- <mule.maven.plugin.version>3.5.1</mule.maven.plugin.version> -->
 	</properties>
 
 	<build>
@@ -29,6 +31,22 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<!-- Below part is added -->
+				<configuration>
+		        <cloudHubDeployment>
+		            <uri>https://anypoint.mulesoft.com</uri>
+		            <muleVersion>${mule.version}</muleVersion>
+		            <username>${anypoint.username}</username>
+		            <password>${anypoint.password}</password>
+		            <environment>${env}</environment>
+		            <applicationName>${appname}</applicationName>
+		            <businessGroup>${business}</businessGroup>
+		            <workerType>${workers}</workerType>
+		            <objectStoreV2>true</objectStoreV2>
+		        </cloudHubDeployment>
+		      <classifier>mule-application</classifier>  
+		    </configuration>
+				
 			</plugin>
 		</plugins>
 	</build>
