--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        	<!-- as per reference<app.runtime>4.3.0</app.runtime> -->
-		<app.runtime>4.3.0-20210322</app.runtime>
+		<app.runtime>4.3.0</app.runtime>
 		<!-- maven plugin updated -->
 		<mule.maven.plugin.version>3.8.1</mule.maven.plugin.version>
 		<!-- <mule.maven.plugin.version>3.5.1</mule.maven.plugin.version> -->
