--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
 		            <workers>${workers}</workers>
                             <workerType>${workerType}</workerType>
 		            <objectStoreV2>true</objectStoreV2>
+			    <properties>
+				<environment>${environment}</environment>
+			    </properties>	
 		        </cloudHubDeployment>
 		      <classifier>mule-application</classifier>  
 		    </configuration>
